<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        tools:context="com.great.cash.rupee.module.user.LogonActivity">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:onClick="@{clickListener}"
                android:padding="15dp"
                android:src="@mipmap/ic_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_register_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="43dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="We sent you an OTP to your number"
            android:textColor="@color/text_color4"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <LinearLayout
            android:id="@+id/ll_input_code"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="43dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_register_des">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/email" />

            <EditText
                android:id="@+id/et_input_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/et_input_shape"
                android:gravity="center_vertical"
                android:hint="@string/enter_code_hint"
                android:inputType="number"
                android:lines="1"
                android:maxLength="4"
                android:textColor="@color/text_color2"
                android:textColorHint="@color/text_color3"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_get_code"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/btn1_se"
                android:maxWidth="100dp"
                android:minWidth="60dp"
                android:onClick="@{clickListener}"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/get"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            android:background="@color/text_color3"
            app:layout_constraintTop_toBottomOf="@id/ll_input_code" />

        <LinearLayout
            android:id="@+id/ll_input_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="43dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_input_code">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/mima" />

            <EditText
                android:id="@+id/et_input_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/et_input_shape"
                android:gravity="center_vertical"
                android:hint="@string/set_login_pwd"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16"
                android:textColor="@color/text_color2"
                android:textColorHint="@color/text_color3"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_show_pwd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:onClick="@{clickListener}"
                android:src="@mipmap/buxianshimm" />
        </LinearLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            android:background="@color/text_color3"
            app:layout_constraintTop_toBottomOf="@id/ll_input_pwd" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="43dp"
            android:background="@drawable/btn1_se"
            android:enabled="false"
            android:onClick="@{clickListener}"
            android:text="@string/submit"
            android:textColor="@drawable/text_color_selector"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <ImageView
            android:id="@+id/iv_agree"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginTop="14dp"
            android:onClick="@{clickListener}"
            android:src="@mipmap/tongguo"
            app:layout_constraintStart_toStartOf="@id/btn_submit"
            app:layout_constraintTop_toBottomOf="@id/btn_submit" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:includeFontPadding="false"
            android:text="@string/agreement"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@id/btn_submit"
            app:layout_constraintStart_toEndOf="@id/iv_agree"
            app:layout_constraintTop_toBottomOf="@id/btn_submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>