<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        tools:context="com.great.cash.rupee.module.user.LoginActivity">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:onClick="@{clickListener}"
                android:padding="15dp"
                android:src="@mipmap/ic_back" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_back1"
                android:text="Back"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_login_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:gravity="center"
            android:text="@string/login_welcome"
            android:textColor="@color/text_color4"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <LinearLayout
            android:id="@+id/ll_input_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="43dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_login_welcome">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/phone" />

            <EditText
                android:id="@+id/tv_input_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="10"
                android:hint="enter your phone number"
                android:background="@drawable/et_input_shape"
                android:gravity="center_vertical"
                android:textColor="@color/text_color2"
                android:textColorHint="@color/text_color3"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            android:background="@color/text_color3"
            app:layout_constraintTop_toBottomOf="@id/ll_input_phone" />

        <LinearLayout
            android:id="@+id/ll_input_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="43dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_input_phone">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/mima" />

            <EditText
                android:id="@+id/et_input_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/et_input_shape"
                android:gravity="center_vertical"
                android:hint="@string/enter_pwd_hint"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/text_color2"
                android:textColorHint="@color/text_color3"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            android:background="@color/text_color3"
            app:layout_constraintTop_toBottomOf="@id/ll_input_pwd" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="43dp"
            android:gravity="center"
            android:onClick="@{clickListener}"
            android:text="@string/forget_pwd"
            android:textColor="@color/text_yellow"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="43dp"
            android:background="@drawable/btn1_se"
            android:enabled="false"
            android:onClick="@{clickListener}"
            android:text="@string/login_"
            android:textColor="@drawable/text_color_selector"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forget_pwd" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>