<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context="com.great.cash.rupee.module.home.PermissionPage">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:text="Permissions"
            android:textColor="@color/text_color2"
            android:textSize="21sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:text="@string/hi_there"
            android:textColor="@color/text_color2"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_permission_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingMultiplier="1.2"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/permission_des"
            android:textColor="@color/text_color2"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            tools:itemCount="10"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_permission_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/cancel_btn_bg"
                android:gravity="center"
                android:onClick="@{clickListener}"
                android:text="DENY"
                android:textColor="@color/text_grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/confirm_btn_bg"
                android:gravity="center"
                android:onClick="@{clickListener}"
                android:text="ACCEPT"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_agree"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:onClick="@{clickListener}"
                android:padding="4dp"
                android:src="@mipmap/icon_check_true" />

            <TextView
                android:id="@+id/tv_go_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/ok_go_des"
                android:textColor="@color/text_color3"
                android:textSize="13sp" />
        </LinearLayout>


    </LinearLayout>

</layout>